# cpp-coding-challenge-1

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  Solver.cpp  Solver.h
test/: CMakeLists.txt  test_solver.cpp
